@@ -1,3 +1,6 @@
+* bail out if the master/slave shared secret file is world-readable
+  or writable --niko
+
 * add some security notes to the master/slave documentation --niko
 
 * Switch message hash generation to Digest::HMAC_MD5 (bundled) since this
